# pytest-param-scope

./: .coveragerc  LICENSE.txt  README.md  changelog.md  pyproject.toml  tox.ini
.github/: RELEASING.md
.github/workflows/: pypi-package.yml  test.yml
examples/: test_class.py  test_error.py  test_marker_bad_params.py  test_param_scope.py  test_with_repeat.py  test_yield.py
src/pytest_param_scope/: plugin.py
tests/: test_error.py  test_param_scope.py  test_yield.py
